2016-08-02  Florian Weimer  <fweimer@redhat.com>

	[BZ #19469]
	* malloc/Makefile (CPPFLAGS): Compile tests with
	-DTEST_NO_MALLOPT.
	* test-skeleton.c (main): Only call mallopt if !TEST_NO_MALLOPT.

2016-08-03  Florian Weimer  <fweimer@redhat.com>

	[BZ #17730]
	Avoid using memalign for TCB allocations.
	* elf/dl-tls.c (tcb_to_pointer_to_free_location): New.
	(_dl_allocate_tls_storage): Use malloc and manual alignment.
	Avoid alignment gap in the TLS_DTV_AT_TP case.
	(_dl_deallocate_tls): Use tcb_to_pointer_to_free_location to
	determine the pointer to free.
	* nptl/tst-tls3-malloc.c: New test.
	* nptl/Makefile (tests): Add it.
	(tst-tls3-malloc): Link with libdl, libpthread.
	(LDFLAGS-tst-tls3-malloc): Set.
	(tst-tls3-malloc.out): Depend on DSO used in test.

2016-08-03  Florian Weimer  <fweimer@redhat.com>

	[BZ #17730]
	Avoid using memalign for TLS allocations.
	* sysdeps/generic/dl-dtv.h (struct dtv_pointer): New.  Replaces
	is_static member with to_free member.
	(union dtv): Use struct dtv_pointer.
	* csu/libc-tls.c (__libc_setup_tls): Set to_free member of struct
	dtv_pointer instead of is_static.
	* elf/dl-tls.c (_dl_allocate_tls_init): Likewise.
	(_dl_deallocate_tls): Free to_free member of struct dtv_pointer
	instead of val.
	(allocate_dtv_entry): New function.
	(allocate_and_init): Return struct dtv_pointer.  Call
	allocate_dtv_entry instead of __libc_memalign.
	(_dl_update_slotinfo): Free to_free member of struct dtv_pointer
	instead of val.
	(tls_get_addr_tail): Set to_free member of struct dtv_pointer
	instead of is_static.  Adjust call to allocate_and_init.
	* nptl/allocatestack.c (get_cached_stack): Free to_free member of
	struct dtv_pointer instead of val.

2015-03-17  Alexandre Oliva <aoliva@redhat.com>

	[BZ #17090]
	[BZ #17620]
	[BZ #17621]
	[BZ #17628]
	* NEWS: Update.
	* elf/dl-tls.c (_dl_update_slotinfo): Clean up outdated DTV
	entries with Static TLS too.  Skip entries past the end of the
	allocated DTV, from Alan Modra.